CSCI/Coding5/compiling_error.txt
Game.cpp: In member function 'void Game::LookAround(Player&, int)':
Game.cpp:518:7: error: declaration of 'int divisor' shadows a parameter
   int divisor = 6;
       ^~~~~~~
